Made it look better on smaller screens, aka, added media query to style sheet. Bottom text still overlaps chat, needs fixing.

--- a/css/Styyyle.css
+++ b/css/Styyyle.css
@@ -110,7 +110,7 @@ section {
 
 .videoWrapper {
 	position: relative;
-	padding-bottom: 55%; /* 16:9 */
+	padding-bottom: 56%; /* 16:9 */
 	padding-top: 25px;
 	height: 0;
 	margin-left: 3%;
@@ -125,7 +125,7 @@ section {
 
 .chatWrapper {
 	position: relative;
-	padding-bottom: 100%; /* 16:9 */
+	padding-bottom: 110%;
 	padding-top: 25px;
 	height: 0;
 }
@@ -143,9 +143,92 @@ section {
 }
 
 #timeSinceStart {
-	font-size: .9vw;
+	font-size: 1.2vw;
 }
 
 #NOTE, #timeSinceStart {
 	color: #ffffff;
+}
+
+#toTimestamp {
+	background: #cc0000;
+  	border: none;
+  	border-radius: 10px;
+  	color: #ffffff;
+	font-family: 'Changa One', sans-serif;
+  	font-size: 20px;
+  	width: 150px;
+	padding: 10px;
+	margin: 0 0 0 20px;
+  	outline: none;
+  	cursor: pointer;	
+	box-shadow: 5px 5px 10px 5px black;
+}
+#toTimestamp:hover {
+	background: #ff0000;
+}
+
+@media (max-width: 960px){
+	
+	#videoDiv{
+		float: none;
+		width: 95%;
+		text-align: center;
+		margin: 0 auto;
+	}
+	
+	.videoWrapper {
+		position: relative;
+		padding-bottom: 56%; /* 16:9 */
+		padding-top: 25px;
+		height: 0;
+		margin: 0;
+	}
+	
+	.videoWrapper iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	#chatDiv{
+		margin: 20px 0 0 0;
+		width: 100%;
+		height: 300px;
+		float: none;
+	}
+	
+	.chatWrapper {
+		position: relative;
+		padding-bottom: 0;
+		padding-top: 0;
+		height: 100%;
+	}
+	
+	.chatWrapper iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		box-shadow: none;
+	}
+	
+	#footNote {
+		text-align: center;
+		float: none;
+		position: relative;
+	}
+
+	#VideoTitle{
+		font-size: 4.5vw;
+		color: #ffffff;
+	}
+	
+	#timeSinceStart {
+		padding-top: 3px;
+		font-size: 2.9vw;
+	}
 }
